# obviousbench

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-DATA-DOCS.md  README.md  bundle_manifest.json  obviousbench_build_plan.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
configs/: 2026-06-07-substring-absent-count-gpt-5-4-size-correction-panel.yaml  2026-06-07-substring-absent-count-panel.yaml  2026-06-07-substring-absent-count-release-160-gpt-5-4-nano-pass3-panel.yaml  2026-06-07-substring-absent-count-suite-gpt-5-4-nano-pass3-panel.yaml  README.md  gemini_3_5_flash_3_1_flash_lite_pass3_8x28_20260606_manifest.csv  gemini_3_5_flash_3_1_flash_lite_pass3_8x28_20260606_panel.yaml  gpt_5_4_mini_passk_8x28_20260606_manifest.csv  gpt_5_4_mini_passk_8x28_20260606_panel.yaml  gpt_5_4_nano_passk_8x28_20260606_manifest.csv  gpt_5_4_nano_passk_8x28_20260606_panel.yaml  gpt_5_5_sonnet_4_6_pass3_8x28_20260606_manifest.csv  gpt_5_5_sonnet_4_6_pass3_8x28_20260606_panel.yaml  model_registry_v1.yaml  model_thinking_settings_v1.yaml  models_v0.example.yaml  paper_v1_8x28_cost_telemetry_rerun2_20260603_manifest.csv  paper_v1_8x28_current_222_20260602_manifest.csv  paper_v1_8x28_current_222_20260602_panel.yaml  paper_v1_8x28_current_222_20260602_repair2_qwen_max.yaml  paper_v1_8x28_current_222_20260602_repair3_xai_grok.yaml  paper_v1_8x28_current_222_20260602_repair_provider_errors.yaml  paper_v1_8x28_current_222_keyed_20260602_manifest.csv  paper_v1_8x28_fill_gpt_5_4_mini_low_20260603_manifest.csv  paper_v1_8x28_fill_gpt_5_4_mini_low_20260603_panel.yaml  paper_v1_8x28_pilot_20260602_manifest.csv  paper_v1_8x28_pilot_20260602_panel.yaml  paper_v1_affected_rerun_10k_manifest.csv  paper_v1_analysis_plan.yaml  paper_v1_anthropic_adaptive_thinking_rerun_20260602_manifest.csv  paper_v1_anthropic_no_thinking_fill_20260602_panel.yaml  paper_v1_cap_affected_rerun_10k_manifest.csv  paper_v1_combined_228_rescored_20260602_manifest.csv  paper_v1_combined_234_overline_20260602_manifest.csv  (+40 more)
(+689 files in other folders)
